--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.3",
     "mongoose": "^5.13.7",
     "nodemon": "^2.0.12"
   }
