--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "author": "Rafael Costa",
   "license": "ISC",
   "dependencies": {
+    "bootstrap-icons": "^1.5.0",
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
+    "express-session": "^1.17.2",
     "mongoose": "^5.13.7",
     "nodemon": "^2.0.12"
   }
