--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   "author": "Rafael Costa",
   "license": "ISC",
   "dependencies": {
+    "agency": "^1.0.2",
     "bootstrap-icons": "^1.5.0",
     "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
     "express-session": "^1.17.2",
-    "mongoose": "^5.13.7",
+    "mongoose": "^5.13.8",
     "nodemon": "^2.0.12"
   }
 }
