--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "agency": "^1.0.2",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap-icons": "^1.5.0",
     "connect-flash": "^0.1.1",
     "express": "^4.17.1",
