--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express-handlebars": "^5.3.3",
     "express-session": "^1.17.2",
     "mongoose": "^5.13.8",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
